Picture spilling problem in google chrome fixed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -928,6 +928,7 @@ figure {
 }
 img {
   vertical-align: middle;
+  max-width: 100%;
 }
 .img-responsive,
 .thumbnail > img,
